# osfm

./: AD_server.py  Install.h  Install.resx  Main.cpp  MyForm.cpp  MyForm.h  MyForm.resx  README.md  capture_linux.cpp  client.cpp  client.py  enc.cpp  enc_intel.cpp  final_client.py  final_server.py  index.html  main.cpp  new_test_client.py  new_test_server.py  osfm  osfm-net-onefile.py  osfm-net.py  osfm-prompt.md  osfm.cpp  osfmgf.vcxproj  osfmgf.vcxproj.filters  packagebuild.toml  pyAD.py  pyproject.toml  serverhehe.py  setup.py  streamer.cpp  test-osfm-net.py  vulkan_ren.cpp  winget.py
.github/workflows/: publish.yaml
binaries/: server.py  utils.py
osfm/: __main__.py  client.py  clientfunc.py  server.py
osfm-net/: client - Copy.py  client.py  final_client.py  final_server.py  osfm-client.spec  requirements.txt  server - Copy.py  server.py  test2_server.py  test_client.py  test_server.py  trail.py  trail2.py  trail_2.py
osfmbinaries/: __init__.py  __main__.py  client.py  clientfunc.py  server.py  utils.py
osfmgf/: Install.h  MyForm.cpp  MyForm.h  osfmgf.sln  osfmgf.vcxproj.filters  utilities.h
prev_att/: client - Copy.py  client-legacy.py  client.py  final_client.py  final_server.py  new_test_client.py  new_test_server.py  osfm-server.spec  server-legacy.py  serverhehe.py  test_client.py  test_server.py  trail.py  trail2.py
prev_att/osfm-net-prev/: client.py
x64/Debug/: osfmgf.MyForm.resources  osfmgf.exe.metagen  osfmgf.exe.recipe  osfmgf.vcxproj.FileListAbsolute.txt  osfmgf.vcxproj.GenerateResource.cache
x64/Release/: osfmgf.exe.metagen  (+3 more)
(+27 files in other folders)
